rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
        - name: rest
          image: demucs-rest:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
