rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
spec:
  selector:
    app: rest
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
